--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         These are not the sources you are looking for
 
         (These are)
-        http://github.com/LuisAlejandro/luisalejandro.github.io
+        http://github.com/HuntingBears/huntingbears.github.io
 
         -->
 
@@ -54,7 +54,7 @@
         {% for tag in page.tags %}<meta property="article:tag" content="{{ tag }}" />
         {% endfor %}
         {% endif %}
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:url" content="{{ head_url }}" />
         <meta name="twitter:title" content="{{ head_title }}" />
         <meta name="twitter:description" content="{{ head_description }}" />
